# codex-gemini-mcp

./: AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: README_EN.md
src/geminimcp/: __init__.py  server.py
