[project]
name = "geminimcp"
version = "0.1.0"
description = "MCP server that wraps the Gemini CLI for Codex integration"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "mcp[cli]>=1.21.2",
]

[project.urls]
Repository = "https://github.com/pickarm/codex-gemini-mcp"
Homepage = "https://github.com/pickarm/codex-gemini-mcp"

[project.scripts]
geminimcp = "geminimcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geminimcp"]
